# Main_Project

./: .clang-format  .clang-tidy  .coderabbit.yaml  .gitignore  CMakeLists.txt  LICENSE
.github/workflows/: clang-ci.yml  lint.yml
compute-server/: CMakeLists.txt  config.json  config.sample.json
compute-server/include/core/: AppConfig.h  AppContext.h  Pipeline.h
compute-server/include/domain/: ChannelFrame.h  DetectedObject.h  NormBox.h  RawPacket.h
compute-server/include/interfaces/: ICoordinateTransform.h  IGroundPointExtractor.h  IImageCoordinateMapper.h  IMetadataParser.h  IMetadataSource.h  IMqttTransport.h  INetwork.h  IObjectRouter.h  IObjectSanitizer.h  ISink.h
compute-server/src/: main.cpp
compute-server/src/core/: AppContext.cpp  Pipeline.cpp
compute-server/src/ground/: BottomCenterExtractor.cpp  BottomCenterExtractor.h
compute-server/src/log/: Logger.h
compute-server/src/mapper/: AffineImageCoordinateMapper.cpp  AffineImageCoordinateMapper.h
compute-server/src/mqtt/: MqttTransport.cpp  MqttTransport.h
compute-server/src/network/: RtspClient.cpp  RtspClient.h  RtspClientV2.cpp  RtspClientV2.h
compute-server/src/parser/: OnvifParser.cpp  OnvifParser.h
compute-server/src/route/: ParentBasedRouter.cpp  ParentBasedRouter.h
compute-server/src/sanitize/: ContainmentSanitizer.cpp  ContainmentSanitizer.h
compute-server/src/sink/: ConsoleSink.h  MqttBlurSink.cpp  MqttBlurSink.h  MqttFrameSink.h  MqttSink.cpp  MqttSink.h  MqttTopViewSink.cpp  MqttTopViewSink.h
compute-server/src/source/: RtspOnvifSource.cpp  RtspOnvifSource.h  RtspOnvifSourceV2.cpp  RtspOnvifSourceV2.h
compute-server/src/transform/: HomographyTransform.cpp  HomographyTransform.h  NullTransform.cpp  NullTransform.h
compute-server/test/: sink_lifecycle.cpp  verify_world.cpp
control-server/: CMakeLists.txt  config.json  config.sample.json
control-server/include/core/: AppConfig.h  AppContext.h  Controller.h
control-server/include/domain/: RiskEvaluation.h  WorldFrame.h  WorldObject.h  WorldObservation.h  WorldPoint.h
control-server/include/interfaces/: IChannelReceiver.h  IClock.h  ICrossChannelFuser.h  IDistanceMetric.h  IFrameAggregator.h  IHwEventDispatcher.h  ILocalToWorldTransform.h  IRiskPolicy.h  ISink.h  IZoneMapper.h
control-server/src/: main.cpp
control-server/src/aggregate/: TimeWindowAggregator.cpp  TimeWindowAggregator.h  TimeWindowAggregatorV2.cpp  TimeWindowAggregatorV2.h
control-server/src/core/: AppContext.cpp  Controller.cpp
control-server/src/dispatch/: ConsoleDispatcher.cpp  ConsoleDispatcher.h  SerialHwEventDispatcher.cpp  SerialHwEventDispatcher.h
control-server/src/fuse/: ConcatFuser.cpp  ConcatFuser.h  GridFuser.cpp  GridFuser.h
control-server/src/log/: Logger.h
control-server/src/metric/: EuclideanMetric.cpp  EuclideanMetric.h
control-server/src/receive/: MqttChannelReceiver.cpp  MqttChannelReceiver.h  NullReceiver.cpp  NullReceiver.h
control-server/src/risk/: ThresholdRiskPolicy.cpp  ThresholdRiskPolicy.h
control-server/src/sink/: ConsoleSink.cpp  ConsoleSink.h  MqttTransport.cpp  MqttTransport.h
control-server/src/time/: SystemClock.cpp  SystemClock.h
control-server/src/transform/: AffineLocalToWorldTransform.cpp  AffineLocalToWorldTransform.h  NullTransform.cpp  NullTransform.h
control-server/src/zone/: AngleZoneMapper.cpp  AngleZoneMapper.h  NullZoneMapper.cpp  NullZoneMapper.h  SpatialZoneMapper.cpp  SpatialZoneMapper.h
control-server/test/: verify_channel_status.cpp  verify_pipeline.cpp
controller/: CMakeLists.txt
controller/include/core/: AppConfig.h  AppContext.h  Controller.h  FrameAggregator.h
controller/include/interfaces/: IAppSender.h  IDriverSender.h  INetwork.h  IParser.h  IRiskDetector.h
controller/include/model/: ParsedResult.h  RiskResult.h  TrackedPoint.h
controller/include/model/incoming/: MetadataPacket.h
controller/include/model/outgoing/: AppPacket.h  BlurTarget.h  DriverPacket.h
controller/src/: main.cpp
controller/src/core/: AppContext.cpp  Controller.cpp  FrameAggregator.cpp
deploy/logrotate/: logrotate-hourly.conf  veda-compute  veda-control
driver/: .clang-tidy
manual/: TP-97-mqtt-config-refactoring.md  coding_convention.md  git-flow.md  jira.md
performance/: compute-server.md  control-server.md
processor/: CMakeLists.txt
processor/include/core/: AppConfig.h  AppContext.h  Processor.h
processor/include/interfaces/: INetwork.h  IParser.h  ISender.h  ITrans.h
processor/include/parser/: OnvifParser.h
processor/include/trans/: HomographyTrans.h
processor/src/: main.cpp
processor/src/core/: AppContext.cpp  Processor.cpp
processor/src/network/: RtspClient.cpp
processor/src/parser/: OnvifParser.cpp
processor/src/send/: NullSender.cpp
processor/src/trans/: HomographyTrans.cpp
shared/: Contract.h  Logger.h  driver_protocol.h  hw_control_protocol.h
